--- a/p8105_HW2_yj2686.Rmd
+++ b/p8105_HW2_yj2686.Rmd
@@ -15,12 +15,17 @@ library(readxl)
 Read and clean the Mr. Trash Wheel sheet:
 
 ```{r Mr_Trash_Weel}
-MrTrashData = read_excel("./data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx", 
-                                 sheet = "Mr. Trash Wheel", 
-                                 range = "A2:N535" ) %>%
+MrTrashData = 
+  ##specify the sheet in the Excel file and to omit non-data entries
+  read_excel("./data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx", 
+             sheet = "Mr. Trash Wheel", 
+             range = "A2:N535" ) %>%
+  ##use reasonable variable names
   janitor::clean_names() %>% 
+  ##omit rows that do not include dumpster-specific data
   drop_na(dumpster) %>% 
-  mutate(sports_balls = as.integer(round(sports_balls, 0)))
+  ## round the number of sports balls to the nearest integer
+  mutate(sports_balls = round(sports_balls, 0))
 
 MrTrashData
 
@@ -30,15 +35,33 @@ Read and clean precipitation data for 2018 and 2019.
 for 2018
 
 ```{r}
-prcp_2018 = read_excel("./data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",
-                       sheet = "2018 Precipitation",
-                       range = "A2:B14") %>% 
+prcp_2018 = 
+  read_excel("./data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",
+             sheet = "2018 Precipitation",
+             range = "A2:B14") %>% 
+  ##use reasonable variable names
   janitor::clean_names() %>% 
+  ##omit rows without precipitation data
   drop_na() %>% 
+  ##add a variable for year
   mutate(year = "2018") %>% 
   relocate(year)
-
 prcp_2018
+```
+
+```{r}
+prcp_2019 = 
+  read_excel("./data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",
+             sheet = "2019 Precipitation",
+             range = "A2:B14") %>% 
+  ##use reasonable variable names
+  janitor::clean_names() %>% 
+  ##omit rows without precipitation data
+  drop_na() %>% 
+  ##add a variable for year
+  mutate(year = "2019") %>% 
+  relocate(year)
+prcp_2019 
 ```
 
 
