--- a/p8105_HW2_yj2686.md
+++ b/p8105_HW2_yj2686.md
@@ -146,6 +146,48 @@ In precipitation data, the key variables are year, month, total.
 Precipitation data has 24 number of observations in total. The total
 precipitation in 2018 is 70.33
 
-\`\`\`
-
 ## Problem 2
+
+``` r
+pols_month = read_csv("./data/fivethirtyeight_datasets/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  ## break up the variable mon into integer variables year, month, and day
+  separate(mon, into = c("year", "month","day")) %>%
+  ## replace month number with month name
+  mutate(month = as.integer(month),
+         month = month.name[month]) %>% 
+  ## create a president variable taking values gop and dem
+  mutate(president = if_else(prez_gop == 0, "dem", "gop")) %>%
+  ## remove prez_dem, prez_gop, and day variables
+  select(-prez_dem, -prez_gop, -day)
+```
+
+    ## Rows: 822 Columns: 9
+
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+pols_month
+```
+
+    ## # A tibble: 822 × 9
+    ##    year  month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
+    ##    <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>    
+    ##  1 1947  January        23      51     253      23      45     198 dem      
+    ##  2 1947  February       23      51     253      23      45     198 dem      
+    ##  3 1947  March          23      51     253      23      45     198 dem      
+    ##  4 1947  April          23      51     253      23      45     198 dem      
+    ##  5 1947  May            23      51     253      23      45     198 dem      
+    ##  6 1947  June           23      51     253      23      45     198 dem      
+    ##  7 1947  July           23      51     253      23      45     198 dem      
+    ##  8 1947  August         23      51     253      23      45     198 dem      
+    ##  9 1947  September      23      51     253      23      45     198 dem      
+    ## 10 1947  October        23      51     253      23      45     198 dem      
+    ## # … with 812 more rows
