--- a/p8105_HW2_yj2686.md
+++ b/p8105_HW2_yj2686.md
@@ -148,8 +148,10 @@ precipitation in 2018 is 70.33
 
 ## Problem 2
 
+First, clean the data in pols-month.csv.
+
 ``` r
-pols_month = read_csv("./data/fivethirtyeight_datasets/pols-month.csv") %>% 
+pols_month = read_csv("./data/fivethirtyeight_datasets/pols-month.csv",show_col_types = FALSE) %>% 
   janitor::clean_names() %>% 
   ## break up the variable mon into integer variables year, month, and day
   separate(mon, into = c("year", "month","day")) %>%
@@ -160,20 +162,7 @@ pols_month = read_csv("./data/fivethirtyeight_datasets/pols-month.csv") %>%
   mutate(president = if_else(prez_gop == 0, "dem", "gop")) %>%
   ## remove prez_dem, prez_gop, and day variables
   select(-prez_dem, -prez_gop, -day)
-```
 
-    ## Rows: 822 Columns: 9
-
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
-    ## date (1): mon
-
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-``` r
 pols_month
 ```
 
@@ -191,3 +180,79 @@ pols_month
     ##  9 1947  September      23      51     253      23      45     198 dem      
     ## 10 1947  October        23      51     253      23      45     198 dem      
     ## # … with 812 more rows
+
+Second, clean the data in snp.csv.
+
+``` r
+snp = read_csv("./data/fivethirtyeight_datasets/snp.csv", show_col_types = FALSE) %>% 
+  janitor::clean_names() %>% 
+  ## break up the variable date into integer variables year, month, and day
+  separate(date, into = c("year", "month","day")) %>%
+  ## replace month number with month name
+  mutate(year = ifelse(day == 00,day,year),
+         year = ifelse(day > 30,day,year))
+         ##month = as.integer(month),
+         #month = month.name[month],
+         #year = as.integer(year)) %>% 
+  #relocate(year, month)
+
+snp
+```
+
+    ## # A tibble: 787 × 4
+    ##    year  month day   close
+    ##    <chr> <chr> <chr> <dbl>
+    ##  1 7     1     15    2080.
+    ##  2 6     1     15    2063.
+    ##  3 5     1     15    2107.
+    ##  4 4     1     15    2086.
+    ##  5 3     2     15    2068.
+    ##  6 2     2     15    2104.
+    ##  7 1     2     15    1995.
+    ##  8 12    1     14    2059.
+    ##  9 11    3     14    2068.
+    ## 10 10    1     14    2018.
+    ## # … with 777 more rows
+
+Third, tidy the unemployment data
+
+``` r
+unemploy = read_csv("./data/fivethirtyeight_datasets/unemployment.csv") %>%
+  
+  pivot_longer(
+    Jan:Dec,
+    names_to = "month",
+    values_to = "unemployment") %>%
+  #janitor::clean_names()
+
+  mutate(month = month.name[match(month,month.abb)])
+```
+
+    ## Rows: 68 Columns: 13
+
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+unemploy
+```
+
+    ## # A tibble: 816 × 3
+    ##     Year month     unemployment
+    ##    <dbl> <chr>            <dbl>
+    ##  1  1948 January            3.4
+    ##  2  1948 February           3.8
+    ##  3  1948 March              4  
+    ##  4  1948 April              3.9
+    ##  5  1948 May                3.5
+    ##  6  1948 June               3.6
+    ##  7  1948 July               3.6
+    ##  8  1948 August             3.9
+    ##  9  1948 September          3.8
+    ## 10  1948 October            3.7
+    ## # … with 806 more rows
