--- a/p8105_HW2_yj2686.md
+++ b/p8105_HW2_yj2686.md
@@ -133,7 +133,7 @@ combined_prcp
     ## 10 2018  October    2.12
     ## # … with 14 more rows
 
-Summary about data
+Summary of datasets
 
 In Mr. Trash Wheel data, the key variables are dumpster, month, year,
 date, weight\_tons, volume\_cubic\_yards, plastic\_bottles, polystyrene,
@@ -157,6 +157,7 @@ pols_month = read_csv("./data/fivethirtyeight_datasets/pols-month.csv",show_col_
   separate(mon, into = c("year", "month","day")) %>%
   ## replace month number with month name
   mutate(month = as.integer(month),
+         year = as.integer(year),
          month = month.name[month]) %>% 
   ## create a president variable taking values gop and dem
   mutate(president = if_else(prez_gop == 0, "dem", "gop")) %>%
@@ -167,18 +168,18 @@ pols_month
 ```
 
     ## # A tibble: 822 × 9
-    ##    year  month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
-    ##    <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>    
-    ##  1 1947  January        23      51     253      23      45     198 dem      
-    ##  2 1947  February       23      51     253      23      45     198 dem      
-    ##  3 1947  March          23      51     253      23      45     198 dem      
-    ##  4 1947  April          23      51     253      23      45     198 dem      
-    ##  5 1947  May            23      51     253      23      45     198 dem      
-    ##  6 1947  June           23      51     253      23      45     198 dem      
-    ##  7 1947  July           23      51     253      23      45     198 dem      
-    ##  8 1947  August         23      51     253      23      45     198 dem      
-    ##  9 1947  September      23      51     253      23      45     198 dem      
-    ## 10 1947  October        23      51     253      23      45     198 dem      
+    ##     year month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
+    ##    <int> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>    
+    ##  1  1947 January        23      51     253      23      45     198 dem      
+    ##  2  1947 February       23      51     253      23      45     198 dem      
+    ##  3  1947 March          23      51     253      23      45     198 dem      
+    ##  4  1947 April          23      51     253      23      45     198 dem      
+    ##  5  1947 May            23      51     253      23      45     198 dem      
+    ##  6  1947 June           23      51     253      23      45     198 dem      
+    ##  7  1947 July           23      51     253      23      45     198 dem      
+    ##  8  1947 August         23      51     253      23      45     198 dem      
+    ##  9  1947 September      23      51     253      23      45     198 dem      
+    ## 10  1947 October        23      51     253      23      45     198 dem      
     ## # … with 812 more rows
 
 Second, clean the data in snp.csv.
@@ -189,29 +190,30 @@ snp = read_csv("./data/fivethirtyeight_datasets/snp.csv", show_col_types = FALSE
   ## break up the variable date into integer variables year, month, and day
   separate(date, into = c("year", "month","day")) %>%
   ## replace month number with month name
-  mutate(year = ifelse(day == 00,day,year),
-         year = ifelse(day > 30,day,year))
-         ##month = as.integer(month),
-         #month = month.name[month],
-         #year = as.integer(year)) %>% 
-  #relocate(year, month)
+  mutate(#year = ifelse(day == 00,day,year),
+         #year = ifelse(day > 30,day,year))
+         month = as.integer(month),
+         month = month.name[month],
+         year = as.integer(year)) %>% 
+  select(-day) %>% 
+  relocate(year, month)
 
 snp
 ```
 
-    ## # A tibble: 787 × 4
-    ##    year  month day   close
-    ##    <chr> <chr> <chr> <dbl>
-    ##  1 7     1     15    2080.
-    ##  2 6     1     15    2063.
-    ##  3 5     1     15    2107.
-    ##  4 4     1     15    2086.
-    ##  5 3     2     15    2068.
-    ##  6 2     2     15    2104.
-    ##  7 1     2     15    1995.
-    ##  8 12    1     14    2059.
-    ##  9 11    3     14    2068.
-    ## 10 10    1     14    2018.
+    ## # A tibble: 787 × 3
+    ##     year month    close
+    ##    <int> <chr>    <dbl>
+    ##  1     7 January  2080.
+    ##  2     6 January  2063.
+    ##  3     5 January  2107.
+    ##  4     4 January  2086.
+    ##  5     3 February 2068.
+    ##  6     2 February 2104.
+    ##  7     1 February 1995.
+    ##  8    12 January  2059.
+    ##  9    11 March    2068.
+    ## 10    10 January  2018.
     ## # … with 777 more rows
 
 Third, tidy the unemployment data
@@ -223,7 +225,8 @@ unemploy = read_csv("./data/fivethirtyeight_datasets/unemployment.csv") %>%
     Jan:Dec,
     names_to = "month",
     values_to = "unemployment") %>%
-  #janitor::clean_names()
+  
+  janitor::clean_names() %>%
 
   mutate(month = month.name[match(month,month.abb)])
 ```
@@ -243,7 +246,7 @@ unemploy
 ```
 
     ## # A tibble: 816 × 3
-    ##     Year month     unemployment
+    ##     year month     unemployment
     ##    <dbl> <chr>            <dbl>
     ##  1  1948 January            3.4
     ##  2  1948 February           3.8
@@ -256,3 +259,97 @@ unemploy
     ##  9  1948 September          3.8
     ## 10  1948 October            3.7
     ## # … with 806 more rows
+
+Join the datasets by merging snp into pols, and merging unemployment
+into the result.
+
+``` r
+result = left_join(pols_month, snp)
+```
+
+    ## Joining, by = c("year", "month")
+
+``` r
+result = left_join(result, unemploy)
+```
+
+    ## Joining, by = c("year", "month")
+
+Summary of datasets:
+
+In pols\_month dataset, the dimension of the dataset is 822, 9, the
+range of years is 1947, 2015, the key variables contains year, month,
+gov\_gop, sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, president
+
+In snp dataset, the dimension of the dataset is 787, 3, the range of
+years is 1, 12, the key variables contains year, month, close
+
+In unemployment dataset, the dimension of the dataset is 816, 3, the
+range of years is 1948, 2015,the key variables contains year, month,
+unemployment
+
+## Problem 3
+
+Load and tidy the data.
+
+``` r
+popular_baby_names = 
+  read.csv("./data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(ethnicity = recode(ethnicity, "ASIAN AND PACI" = "ASIAN AND PACIFIC ISLANDER"),
+         ethnicity = recode(ethnicity, "WHITE NON HISP" = "WHITE NON HISPANIC"),
+         ethnicity = recode(ethnicity, "BLACK NON HISP" = "BLACK NON HISPANIC"),
+         child_s_first_name =  str_to_title(child_s_first_name),
+         ) %>%
+  distinct()
+```
+
+Produce a well-structured, reader-friendly table showing the rank in
+popularity of the name “Olivia” as a female baby name over time
+
+``` r
+olivia_rank = 
+  popular_baby_names %>% 
+  filter(child_s_first_name == "Olivia", gender == "FEMALE") %>% 
+  select(-count, -child_s_first_name,-gender) %>% 
+  pivot_wider(
+    names_from = year_of_birth,
+    values_from = rank
+  ) %>%
+  knitr::kable(caption = "Rank in popularity of the name Olivia as a female baby name over time")
+olivia_rank
+```
+
+| ethnicity                  | 2016 | 2015 | 2014 | 2013 | 2012 | 2011 |
+|:---------------------------|-----:|-----:|-----:|-----:|-----:|-----:|
+| ASIAN AND PACIFIC ISLANDER |    1 |    1 |    1 |    3 |    3 |    4 |
+| BLACK NON HISPANIC         |    8 |    4 |    8 |    6 |    8 |   10 |
+| HISPANIC                   |   13 |   16 |   16 |   22 |   22 |   18 |
+| WHITE NON HISPANIC         |    1 |    1 |    1 |    1 |    4 |    2 |
+
+Rank in popularity of the name Olivia as a female baby name over time
+
+Produce a similar table showing the most popular name among male
+children over time.
+
+``` r
+male_rank = 
+  popular_baby_names %>%
+  filter(gender == "MALE", rank == "1") %>% 
+  select(-count, -rank, -gender) %>% 
+  pivot_wider(
+    names_from = year_of_birth,
+    values_from = child_s_first_name
+  ) %>%
+  knitr::kable(caption = "Rank in popularity of the male baby name over time")
+male_rank
+```
+
+| ethnicity                  | 2016   | 2015   | 2014   | 2013   | 2012   | 2011    |
+|:---------------------------|:-------|:-------|:-------|:-------|:-------|:--------|
+| ASIAN AND PACIFIC ISLANDER | Ethan  | Jayden | Jayden | Jayden | Ryan   | Ethan   |
+| BLACK NON HISPANIC         | Noah   | Noah   | Ethan  | Ethan  | Jayden | Jayden  |
+| HISPANIC                   | Liam   | Liam   | Liam   | Jayden | Jayden | Jayden  |
+| WHITE NON HISPANIC         | Joseph | David  | Joseph | David  | Joseph | Michael |
+
+Rank in popularity of the male baby name over time
