--- a/p8105_HW2_yj2686.md
+++ b/p8105_HW2_yj2686.md
@@ -353,3 +353,22 @@ male_rank
 | WHITE NON HISPANIC         | Joseph | David  | Joseph | David  | Joseph | Michael |
 
 Rank in popularity of the male baby name over time
+
+Finally, for male, white non-hispanic children born in 2016, produce a
+scatter plot showing the number of children with a name (y axis) against
+the rank in popularity of that name (x axis).
+
+``` r
+male_white_non_hispanic_2016 = 
+  popular_baby_names %>%
+  filter(ethnicity == "WHITE NON HISPANIC", gender == "MALE", year_of_birth == "2016")
+
+scatter_plot = 
+  male_white_non_hispanic_2016 %>% 
+  ggplot(aes(x = rank, y = count)) +
+  geom_point() +
+  labs(title = "name rank of male white non-hispanic children born in 2016")
+scatter_plot
+```
+
+![](p8105_HW2_yj2686_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
