update for read snp

--- a/p8105_HW2_yj2686.md
+++ b/p8105_HW2_yj2686.md
@@ -103,17 +103,17 @@ Second, clean the data in snp.csv.
 snp = read_csv("./data/fivethirtyeight_datasets/snp.csv", show_col_types = FALSE) %>% 
   janitor::clean_names() %>% 
   ## break up the variable date into integer variables year, month, and day
+  mutate(date = lubridate::mdy(date)) %>% 
   separate(date, into = c("year", "month","day")) %>%
   ## replace month number with month name
-  mutate(year = ifelse(day == 00,day,year),
-         year = ifelse(day > 30,day,year),
-         month = as.integer(month),
+  mutate(month = as.integer(month),
          month = month.name[month],
+         day = as.integer(day),
          year = as.integer(year),
-         year = ifelse(year <= 21, year + 2000, year + 1900)) %>% 
+         year = ifelse(year > 2021, year - 100, year)) %>%
   select(-day) %>% 
   relocate(year, month) %>%
-  arrange(year,month)
+  arrange(year, month)
 ```
 
 Third, tidy the unemployment data
@@ -163,11 +163,16 @@ range of years is 1947, 2015, the key variables contains year, month,
 gov\_gop, sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, president
 
 In snp dataset, the dimension of the dataset is 787, 3, the range of
-years is 1950, 2012, the key variables contains year, month, close
+years is 1950, 2015, the key variables contains year, month, close
 
 In unemployment dataset, the dimension of the dataset is 816, 3, the
-range of years is 1948, 2015,the key variables contains year, month,
+range of years is 1948, 2015, the key variables contains year, month,
 unemployment
+
+After merging three datasets into result, the dimension of the dataset
+is 822, 11, the range of years is 1947, 2015, the key variables contains
+year, month, gov\_gop, sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem,
+president, close, unemployment
 
 ## Problem 3
 
