--- a/p8105_HW2_yj2686.Rmd
+++ b/p8105_HW2_yj2686.Rmd
@@ -101,17 +101,17 @@ Second, clean the data in snp.csv.
 snp = read_csv("./data/fivethirtyeight_datasets/snp.csv", show_col_types = FALSE) %>% 
   janitor::clean_names() %>% 
   ## break up the variable date into integer variables year, month, and day
+  mutate(date = lubridate::mdy(date)) %>% 
   separate(date, into = c("year", "month","day")) %>%
   ## replace month number with month name
-  mutate(year = ifelse(day == 00,day,year),
-         year = ifelse(day > 30,day,year),
-         month = as.integer(month),
+  mutate(month = as.integer(month),
          month = month.name[month],
+         day = as.integer(day),
          year = as.integer(year),
-         year = ifelse(year <= 21, year + 2000, year + 1900)) %>% 
+         year = ifelse(year > 2021, year - 100, year)) %>%
   select(-day) %>% 
   relocate(year, month) %>%
-  arrange(year,month)
+  arrange(year, month)
 ```
 
 Third, tidy the unemployment data 
@@ -144,7 +144,9 @@ In pols_month dataset, the dimension of the dataset is `r dim(pols_month)`, the 
 
 In snp dataset, the dimension of the dataset is `r dim(snp)`, the range of years is `r range(pull(snp, year))`, the key variables contains `r names(snp)`
 
-In unemployment dataset, the dimension of the dataset is `r dim(unemploy)`, the range of years is `r range(pull(unemploy, year))`,the key variables contains `r names(unemploy)`
+In unemployment dataset, the dimension of the dataset is `r dim(unemploy)`, the range of years is `r range(pull(unemploy, year))`, the key variables contains `r names(unemploy)`
+
+After merging three datasets into result, the dimension of the dataset is `r dim(result)`, the range of years is `r range(pull(result, year))`, the key variables contains `r names(result)`
 
 ## Problem 3
 
